Updated poms and disabled powermock unit tests (reflection!) in etl